# CrossyRoadProject_LI1

./: 2022li1g018.cabal  README.md
doc/html/: Main.html  Tarefa1_2022li1g018.html  Tarefa2_2022li1g018.html  Tarefa3_2022li1g018.html  Tarefa4_2022li1g018.html  Tarefa5_2022li1g018.html  doc-index.html  index.html
src/: Main.hs  Tarefa1_2022li1g018.hs  Tarefa2_2022li1g018.hs  Tarefa3_2022li1g018.hs  Tarefa4_2022li1g018.hs  Tarefa5_2022li1g018.hs
tests/: Fase1.hs  Spec.hs  Tarefa1_2022li1g018_Spec.hs  Tarefa2_2022li1g018_Spec.hs  Tarefa3_2022li1g018_Spec.hs  Tarefa4_2022li1g018_Spec.hs  Tarefa5_2022li1g018_Spec.hs
