cabal-version:      2.4
name:               2022li1g018
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Eduardo de Oliveira Sousa Faria <a104353@alunos.uminho.pt>
                    Nuno Miguel Ribeiro da Silva <a104089@alunos.uminho.pt>

library
  exposed-modules:
    LI12223
    Tarefa1_2022li1g018
    Tarefa2_2022li1g018
    Tarefa3_2022li1g018
    Tarefa4_2022li1g018
    Tarefa5_2022li1g018
  build-depends:    base ^>=4.16.3.0, gloss, random
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g018
  main-is:          Main.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g018
    Tarefa2_2022li1g018
    Tarefa3_2022li1g018
    Tarefa4_2022li1g018
    Tarefa5_2022li1g018
  build-depends:    base ^>=4.16.3.0, gloss, random
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g018-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Tarefa1_2022li1g018
    Tarefa2_2022li1g018
    Tarefa3_2022li1g018
    Tarefa4_2022li1g018
    Tarefa5_2022li1g018
    Tarefa1_2022li1g018_Spec
    Tarefa2_2022li1g018_Spec
    Tarefa3_2022li1g018_Spec
    Tarefa4_2022li1g018_Spec
    Tarefa5_2022li1g018_Spec
  build-depends:        base ^>=4.16.3.0, HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
